# OpenArtifacts

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-open-artifacts-skill-first-mvp.md  2026-06-30-open-artifacts-visual-system.md
docs/superpowers/specs/: 2026-06-29-open-artifacts-skill-first-mvp-design.md  2026-06-30-open-artifacts-visual-system-design.md
open-artifacts/: SKILL.md
open-artifacts/agents/: openai.yaml
open-artifacts/config/: open-artifacts.toml
open-artifacts/references/: artifact-schema.md  publishing-protocol.md
open-artifacts/scripts/: publish_artifact.py
scripts/: deploy_backend_linux.conf  deploy_backend_linux.example.conf  deploy_backend_linux.sh
server/open_artifacts_server/: app.py  config.py  db.py  schema.py  store.py
server/open_artifacts_server/static/: app.js  styles.css
server/open_artifacts_server/templates/: gallery.html  viewer.html
skill/references/: artifact-schema.md
tests/server/: test_api.py  test_config.py  test_schema.py  test_static_renderer.py  test_store.py  test_viewer.py
tests/skill/: test_publish_artifact.py
