[project]
name = "open-artifacts"
version = "0.1.0"
description = "Skill-first open artifact publishing server and Skill helper"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "pytest>=8.2",
  "httpx>=0.27"
]

[project.scripts]
open-artifacts-server = "open_artifacts_server.app:main"

[tool.pytest.ini_options]
pythonpath = ["server", "skill/scripts"]
testpaths = ["tests"]
